--- a/band/index.html
+++ b/band/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../../../favicon.ico">
+    <link rel="stylesheet" href="stylesheet.css">
 
     <title>Mac Miller</title>
 
@@ -19,6 +19,13 @@
   <body>
     <main class="container"> <!-- Change to 'container-fluid' for full-width page-->
       
+      <div id="logo-container">
+      <img src="Macs.jpg" alt="Mac">
+      </div>
+      <h2>Mac Miller</h2>
+      <p>Malcolm James McCormick was born on January 19, 1992, in Pittsburgh, Pennsylvania. He begun playing the piano at the young age of 6. While in High school at Taylor Allderdice High School, by the time he turn 15 he was serious into gettin into rapping. Before having the stage name of Mac miller his name was EZ Mac & realeased his first mixtape "But My Mackin' Ain't Easy" at 15 in 2007.
+       </p>
+       <img src= "Eazy.jpg" alt= "EZ">
 
 
 
